Fix: remove double tap on mobiles by addin onTouchStart event and removing user-select

--- a/src/components/GamePage/GamePlayComponent/GamePlayComponent.css
+++ b/src/components/GamePage/GamePlayComponent/GamePlayComponent.css
@@ -4,7 +4,19 @@
 
   border-radius: 0.375rem;
   position: relative;
+
+  touch-action: manipulation;
+  -webkit-user-select: none;
+  user-select: none;
 }
+
+@media (min-width: 777px) {
+  .game-play-section {
+    border: 3px solid var(--clr-neutral-200);
+  }
+}
+
+/* coin button */
 .coin-btn {
   position: absolute;
   display: grid;
@@ -43,12 +55,7 @@
   }
 }
 
-@media (min-width: 777px) {
-  .game-play-section {
-    border: 3px solid var(--clr-neutral-200);
-  }
-}
-
+/* bomb button */
 .bomb-btn-container {
   position: absolute;
   width: 48px;
